tests/externInfo/dhrystone-exported/db/invalid/path/main.c.loc
87.2.0.1443 88.2.0.1451 89.2.0.1459 90.2.0.1467 